[gd_scene load_steps=11 format=2]

[ext_resource path="res://Questions.gd" type="Script" id=1]
[ext_resource path="res://DefaultTheme.theme" type="Theme" id=2]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://fonts/Lato-Regular.ttf"

[sub_resource type="DynamicFont" id=2]

size = 18
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=17]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=18]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=20]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Corner Radius" ]

[sub_resource type="DynamicFontData" id=21]

font_path = "res://fonts/Lato-Regular.ttf"

[sub_resource type="DynamicFont" id=8]

size = 12
use_mipmaps = false
use_filter = false
font_data = SubResource( 21 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Questions" type="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 350, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "Theme" ]

[node name="Task" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 261.0
margin_bottom = 22.0
rect_min_size = Vector2( 250, 22 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "This is a task"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Answer" type="OptionButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 265.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 85, 22 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 20 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.453857, 0, 0.660156, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]
_sections_unfolded = [ "Hint", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="ResponseTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="item_selected" from="Answer" to="." method="_on_Answer_item_selected"]

[connection signal="timeout" from="ResponseTimer" to="." method="_on_ResponseTimer_timeout"]


